# Finetune-Compiler

./: .gitignore  CHANGELOG.md  COMMANDS.md  README.md  pyproject.toml  test_config.json
.github/workflows/: test.yml
configs/: asr_whisper.json  colab_optimized.json  default.json
docs/: asr-medical-guide.md  core-engine.md  deployment.md  getting-started.md  quick-start.md  resources.md  ui-architecture.md  vscode-colab-guide.md
engine/: __init__.py
engine/cli/: __init__.py  main.py
engine/data/: __init__.py  formats.py  loader.py
engine/evaluation/: __init__.py  metrics.py
engine/inference/: __init__.py
engine/models/: __init__.py  adapters.py  backend.py  export.py  loader.py  unsloth_loader.py
engine/training/: __init__.py  trainer.py
engine/ui/: __init__.py  app.py
engine/ui_v2/: __init__.py  app.py  components.py  consts.py  manager.py  utils.py
engine/ui_v2/steps/: data.py  deploy.py  model.py  sandbox.py  train.py
engine/utils/: __init__.py  cache.py  checkpoint.py  cleanup.py  config.py  huggingface.py  logging.py  memory.py  unsloth.py
notebooks/: vscode_colab_launcher.ipynb
scripts/: colab_vscode_setup.py  download_gdrive.py  kill_ftune.ps1  prepare_audio_dataset.py  setup_ffmpeg.py  verify_drawer_design.py  verify_features.py  verify_fixes.py  verify_torchcodec.py  verify_ui_backend.py  verify_ui_drawer.py  verify_ui_expansion.py  verify_ui_refactor.py  verify_unsloth_backend.py
tests/: __init__.py  __main__.py  test_config.py  test_data.py  test_features.py  test_format_detection.py  test_models.py  test_ui_v2.py
