[project]
name = "ftune"
version = "0.1.0"
description = "FTune: Easy no-code LLM fine-tuning with a beautiful UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Pradeep" }
]
keywords = ["llm", "fine-tuning", "lora", "qlora", "transformers", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gdown>=4.7.0",
    "evaluate>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "torchcodec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
unsloth = [
    "unsloth[colab-new]>=2024.0",
    "trl>=0.8.0",
]
ui = [
    "gradio>=6.2.0",
]
logging = [
    "mlflow>=2.0.0",
    "wandb>=0.15.0",
]

[project.scripts]
# Main CLI - FTune: Easy Model Fine-Tuning
ftune = "engine.cli.main:app"

# Convenience shortcuts
ftune-train = "engine.cli.main:app"           # uv run ftune-train
ftune-ui = "engine.ui_v2.app:launch_wizard_ui" # uv run ftune-ui (wizard UI)

# Legacy aliases (for backward compatibility)
ai-compile = "engine.cli.main:app"
ai-ui2 = "engine.ui_v2.app:launch_wizard_ui"
kill-ftune = "engine.utils.cleanup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

# ========== RUFF (Linting & Formatting) ==========
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["engine"]

# ========== MYPY (Type Checking) ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ========== PYTEST ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ========== COVERAGE ==========
[tool.coverage.run]
source = ["engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
